--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node api/index.js"
   },
   "dependencies": {
+            "axios": "^1.12.2",
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "body-parser": "^1.20.2"
