--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
             "axios": "^1.12.2",
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+          "resend": "^6.5.2"
   },
   "engines": {
     "node": ">=16.0.0"
