--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-ADMIN_API_KEY = fukuapikeysunli
+ADMIN_API_KEY = mamakku
 RESEND_API_KEY = re_B5xCbPen_KEPNN6Gnyu6YEHHEP6MNxUrD
 NODE_ENV = production
