--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
   "routes": [
     {
       "src": "/",
-      "dest": "/api/index.js"
+      "dest": "/public/index.html" 
     },
     {
       "src": "/contact",
@@ -21,14 +21,22 @@
       "methods": ["POST"]
     },
     {
-      "src": "/(.*)",
+      "src": "/api/(.*)",  
+      "dest": "/api/index.js"
+    },
+    {
+      "src": "/health",
+      "dest": "/api/index.js"
+    },
+    {
+      "src": "/(.*)",  
       "headers": {
         "X-Content-Type-Options": "nosniff",
         "X-Frame-Options": "DENY",
         "X-XSS-Protection": "1; mode=block",
         "Referrer-Policy": "strict-origin-when-cross-origin"
       },
-      "dest": "/api/index.js"
+      "dest": "/public/$1"  
     }
   ],
   "env": {
